[gd_scene load_steps=4 format=3 uid="uid://wqbi8r0gdm48"]

[ext_resource type="Script" path="res://character_sheet_header.gd" id="1_2anq4"]
[ext_resource type="PackedScene" uid="uid://ci75b4qje04i6" path="res://experience_bar.tscn" id="1_a13q1"]
[ext_resource type="PackedScene" uid="uid://phbfcgaaqcgm" path="res://rating_display.tscn" id="2_6rya0"]

[node name="CharacterSheetHeader" type="VBoxContainer"]
offset_right = 500.0
offset_bottom = 152.0
script = ExtResource("1_2anq4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 30
text = "UNIT NAME"
vertical_alignment = 2

[node name="LevelLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "lv. X"

[node name="BackgroundLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Background"

[node name="LessonButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "X lessons available"

[node name="ExperienceBar" parent="." instance=ExtResource("1_a13q1")]
layout_mode = 2

[node name="RatingDisplay" parent="." instance=ExtResource("2_6rya0")]
layout_mode = 2
